--- a/CSS/3 - Selectors/styles.css
+++ b/CSS/3 - Selectors/styles.css
@@ -49,5 +49,6 @@ p {
 /* 
 - you can select the element by name to apply css rules on it.
 - you can group multiple elements to apply the same css rules on them.
+- id selectors must be unique but classes multiple times.
 - you need to notice that last css rule is applied
 */
