--- a/CSS/4 - Divs and spans/styles.css
+++ b/CSS/4 - Divs and spans/styles.css
@@ -18,6 +18,18 @@ div {
   margin: 20px;
 }
 
+span {
+  background-color: #f0f0f0;
+}
+
+.upper-case {
+  text-transform: uppercase;
+}
+
+.font-size {
+  font-size: 20px;
+}
+
 /* 
 - note the difference between div and .second-div, the class selector here has the priority in styling
 */
