--- a/CSS/8 - units/8-4 relative unit - rem/styles.css
+++ b/CSS/8 - units/8-4 relative unit - rem/styles.css
@@ -21,5 +21,5 @@ html {
 
 /* 
 - relative units:
-with rem it is relted to the root parent,ehich is html element to define the dimenssion.
+with rem it is relted to the root parent,which is html element to define the dimenssion.
 */
