--- a/CSS/12 - Typography/12-3 Google Fonts/styles.css
+++ b/CSS/12 - Typography/12-3 Google Fonts/styles.css
@@ -1,13 +1,16 @@
 /*
-font-size - size of the fonts
-font-family describes the font of the element
+GOOGLE FONTS
 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Trade+Winds&display=swap');
 
 body {
-  font-family: Helvetica;
+  font-family: 'Trade Winds';
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1 {
-  font-family: Verdana;
-  font-size: 50px;
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-style: italic;
 }
