font-weight and font-style

--- a/CSS/12 - Typography/12-4 Font-weight & Font-style/styles.css
+++ b/CSS/12 - Typography/12-4 Font-weight & Font-style/styles.css
@@ -1,12 +1,32 @@
 /*
-GOOGLE FONTS
+font-weight how thick or thin characters in text should be displayed.
+font style specifies the style of the font.
+
 */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Trade+Winds&display=swap');
 
 body {
-  font-family: Helvetica;
+  font-family: Verdana, Helvetica;
 }
 
-h1 {
-  font-family: Verdana;
-  font-size: 50px;
+.main-heading {
+  font-family: 'Roboto';
+  font-weight: 900;
+  font-style: italic;
+}
+
+.one {
+  font-weight: 100;
+}
+
+.second-heading {
+  font-family: 'Trade Winds';
+  font-weight: 400;
+}
+
+.two {
+  font-weight: lighter;
+  font-weight: italic;
+  font-weight: oblique;
+  font-weight: normal;
 }
