text-decoration, text-transform,letter-spacing,word-spacing and line-hight

--- a/CSS/12 - Typography/12-6 More text properties/styles.css
+++ b/CSS/12 - Typography/12-6 More text properties/styles.css
@@ -1,12 +1,41 @@
 /*
-GOOGLE FONTS
+line-height - if number * font-size = line-height
+letter-spacing
+word-spacing
+text-transform
+text-decoration
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Trade+Winds&display=swap');
+
 body {
-  font-family: Helvetica;
+  /* line-height - if number * font-size = line-height */
+  /* line-height: 30px; */
+  line-height: 1.5;
+  font-size: 20px;
+  text-decoration: uppercase;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
 }
 
 h1 {
-  font-family: Verdana;
-  font-size: 50px;
+  text-decoration: underline;
+  text-decoration: line-through;
+  text-transform: uppercase;
+}
+
+.one {
+  letter-spacing: 2px;
+  text-decoration: overline;
+}
+
+.two {
+  word-spacing: 10px;
+}
+
+.three {
+  text-transform: capitalize;
 }
