--- a/CSS/13 - Box-Model/13-3 Margin/styles.css
+++ b/CSS/13 - Box-Model/13-3 Margin/styles.css
@@ -1,3 +1,21 @@
 /*
-
+BOX MODEL: Margin
 */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+h1 {
+  background-color: yellow;
+  padding: 20px;
+  margin: 3rem;
+}
+
+p {
+  background-color: blue;
+  padding: 20px;
+  margin: 4rem;
+}
