Display Horizontal centering

--- a/CSS/14 - Display/14-6 Horizontal centring/styles.css
+++ b/CSS/14 - Display/14-6 Horizontal centring/styles.css
@@ -1,18 +1,19 @@
 /* 
-ELEMETS HAVE ITS SET BY DEFAULT
-BLOCK: Alwaysstarts a new line and spans full width
-INLINE: Does not start a new line and spans only content
+HORIZONTAL CENTERING
 */
+
+body {
+  text-align: center;
+}
 
 .block {
   background-color: blue;
   color: white;
-  display: inline;
+  width: 300px;
+  margin: 3px auto;
 }
 
 .inline {
   background-color: red;
   color: white;
-  display: block;
-  margin-bottom: 5px;
 }
