pseudo elemet selectors ::first-line & ::first-letter

--- a/CSS/21 - Selectors III/21-4 first line - first letter/styles.css
+++ b/CSS/21 - Selectors III/21-4 first line - first letter/styles.css
@@ -1,3 +1,16 @@
 /* 
-
+::first-line, ::first-letter
 */
+
+p::first-line {
+  color: red;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+p::first-letter {
+  text.transform: uppercase;
+  letter-spacing: 2px;
+  font-family: Helvetica;
+}
