--- a/CSS/22 - transform/22-2 rotate()/styles.css
+++ b/CSS/22 - transform/22-2 rotate()/styles.css
@@ -28,6 +28,7 @@ div {
   background-color: blue;
   transform: rotateX(80deg);
   transform: rotateY(10deg);
+  transform: rotateZ(20deg);
 }
 
 /* 
