transition: shorthand, delay and all the props

--- a/CSS/23 - transition/23-3 Delay /styles.css
+++ b/CSS/23 - transition/23-3 Delay /styles.css
@@ -4,6 +4,7 @@ Transition:  CSS3 property that allows you to change property values smoothly (o
 
 - Transition property.
 - Transition duration.
+- Transition delay.
 
 */
 
@@ -25,7 +26,11 @@ div:hover {
 }
 .three {
   background-color: blue;
-  transition: background-color 2s;
-  transition-duration: 2s;
-  transition: background-color 2s;
+  transition: background-color, border-radius;
+  transition-duration: 2s, 6s;
+  transition-delay: 2s;
+}
+
+.three:hover {
+  border-radius: 50%;
 }
