--- a/CSS/23 - transition/23-5 All props/styles.css
+++ b/CSS/23 - transition/23-5 All props/styles.css
@@ -4,6 +4,8 @@ Transition:  CSS3 property that allows you to change property values smoothly (o
 
 - Transition property.
 - Transition duration.
+- Transition shorthand.
+- Transition all prop
 
 */
 
@@ -11,10 +13,6 @@ div {
   width: 100px;
   height: 100px;
   display: inline-block;
-}
-
-div:hover {
-  background-color: coral;
 }
 
 .one {
@@ -25,7 +23,15 @@ div:hover {
 }
 .three {
   background-color: blue;
-  transition: background-color 2s;
-  transition-duration: 2s;
-  transition: background-color 2s;
+  /* transition: background-color, border-radius;
+  transition-duration: 2s, 6s;
+  transition-delay: 2s; */
+  /* transition: background-color 2s 1s, border-radius 6s 4s; */
+  transition: all 2s 1s;
+}
+
+.three:hover {
+  border-radius: 50%;
+  background-color: coral;
+  transform: scale(1.2);
 }
